Update to java 11, javafx 17 and our forked tornadofx version